--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </video>
         <div class="content-wrapper">
             <div class="content">
-                <h1 class="main-heading">Colegio Brasilia Bosa <center>I.E.D<</center>/h1>
+                <h1 class="main-heading">Colegio Brasilia Bosa </h1>
                 <div class="button-container">
                     <a href="MANUAL/index.html" class="button">Manual</a>
                     <a href="pagina_boton2.html" class="button">Botón 2</a>
